--- a/aboutme.html
+++ b/aboutme.html
@@ -10,9 +10,9 @@
 rel="stylesheet">
   </head>
   <body>
-    <p class="name">
+    <div class="name">
         S H A U N A L O N
-    </p>
+    </div>
     <div class="content">
       <div class="left-side">
         <p class="statement">Aspiring computer scientist and business owner</p>
